--- a/KindleTurn/res/values/strings.xml
+++ b/KindleTurn/res/values/strings.xml
@@ -1,8 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">KindleTurn</string>
+    <string name="app_name">Kindle Turn</string>
     <string name="action_settings">Settings</string>
-    <string name="hello_world">Hello world!</string>
+    <string name="username_summ">Username</string>
+    <string name="username">Username</string>
+    <string name="password_summ">Password</string>
+    <string name="password">Password</string>
+    <string name="kindle_ip_summ">Kindle IP</string>
+    <string name="kindle_ip">Kindle IP</string>
 
 </resources>
